# vending-machine-collection

./: .gitignore  LICENSE  README.md  VendingMachineFsm.plantuml
cpp/: .clang-format  README.md
cpp/src/cli/: Cli.h  main.cpp
cpp/src/lib/: CMakeLists.txt  VendingMachine.cpp  VendingMachine.h  VendingMachineOperations.h
cpp/test/: tst_VendingMachineFsm.cpp
db/: createdb.py  db.db  db.json
qml/: .clang-format
qml/app/: app.pro  assets.qrc  main.cpp  vending_machine_qml_en_US.ts
qml/app/cmake/: FindDuperAgent.cmake
qml/app/cpp/: uuid.cpp  uuid.h
qml/app/qml/: main.qml  qml.qrc  qtquickcontrols2.conf
qml/app/qml/constants/: Assets.qml  qmldir
qml/app/qml/middlewares/: ApiFixtures.qml  ItemsMiddleware.qml  NavigationMiddleware.qml  qmldir
qml/app/qml/stores/: ItemsModel.qml  RootStore.qml
qml/app/qml/ui/components/: AddSubButton.qml  BottomBar.qml  CategoriesCarousel.qml  ItemCardInBottomBar.qml  ItemIncreaseDecreaseControl.qml  TopBar.qml  UserButton.qml  WireFrame.qml
qml/app/qml/ui/pages/: CheckoutPage.qml  HomePage.qml  Pages.qml  ViewStack.qml  qmldir
qml/build_scripts/: build.sh  build_docs.sh  clang-format-all.sh  clean.sh  config.sh
qml/cmake/: CompilerOptionsAndWarningsConfig.cmake
qml/tests/qml/: qml.qrc
rs-slint/: Cargo.toml  README.md
rs-slint/src/: main.rs
rs-slint/ui/: Body.slint  appwindow.slint  header.slint
rs-slint/ui/components/: categories_carousel.slint  category_card.slint  grid_card.slint  item_card.slint  items_grid.slint  product_grid.slint
rs-slint/ui/pages/: home.slint  page.slint
vending_machine_cpp/: CMakeLists.txt
vending_machine_cpp/src/lib/: VendingMachineFsm.cpp  VendingMachineFsm.plantuml
vending_machine_qml/: .clang-tidy  .cppcheck_suppressions  CMakeLists.txt  README.md  qml-stater.pro  qpm.json
vending_machine_qml/app/: CMakeLists.txt  assets.qrc  crosspod_en_US.ts  main.cpp  qml_starter_en_US.ts  qmlimport.path  vending_machine_qml_en_US.ts
vending_machine_qml/app/cmake/: FindQSyncable.cmake  FindQuickFlux.cmake
vending_machine_qml/app/cpp/: cpp.pri  uuid.cpp  uuid.h
vending_machine_qml/app/qml/: Utils.js  main.qml  qml.qrc  qtquickcontrols2.conf
vending_machine_qml/app/qml/actions/: ActionTypes.qml  AppActions.qml
vending_machine_qml/app/qml/constants/: Constants.qml  Denominations.qml  FsmState.qml  qmldir
vending_machine_qml/app/qml/middlewares/: ItemsMiddleware.qml  NavigationMiddleware.qml  SystemMiddleware.qml  TodoMiddleware.qml  qmldir
vending_machine_qml/app/qml/stores/: Cart.qml  CartModel.qml  ItemsModel.qml  ItemsStore.qml  RootStore.qml  TodoStore.qml  VendingMachineFsm.qml  db.js  qmldir
vending_machine_qml/app/qml/ui/components/: AddSubButton.qml  AddTaskBar.qml  ArrowButton.qml  BottomBar.qml  Cart.qml  CategoriesCarousel.qml  CheckoutSummaryPane.qml  HorizontalCartBar.qml  ItemCard.qml  ItemCardInBottomBar.qml  ItemIncreaseDecreaseControl.qml  ItemsGrid.qml  PaymentPane.qml  PriceBox.qml  StyledButton.qml  TopBar.qml  WireFrame.qml  qmldir
vending_machine_qml/app/qml/ui/pages/: CheckoutPage.qml  HomePage.qml  TodoPage.qml  VendingMachine.qml  ViewStack.qml  qmldir
vending_machine_qml/app/qml/ui/theme/: Theme.qml
vending_machine_qml/build_scripts/: clang-tidy.sh  cppcheck.sh  scan_build.sh  tests.sh
vending_machine_qml/tests/: CMakeLists.txt  tst_dumy.cpp
vending_machine_qml/tests/qml/: tst_tests.cpp
vending_machine_rs/: Cargo.toml
vending_machine_rs/src/: main.rs
vendor_machine_cpp/: conanfile.txt
vendor_machine_cpp/configured_files/: config.hpp.in
vendor_machine_cpp/src/cli/: CMakeLists.txt  Cli.cpp  main.cpp
vendor_machine_cpp/src/lib/: VendingMachineFsm.h  VendingMachineOperations.cpp
vendor_machine_cpp/test/: CMakeLists.txt  tst_VendingMachine.cpp
vendor_machine_rs/: Cargo.toml
